# ResearchApp

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: globals.h  numtypes.h
include/db/: Database.h  LoginManager.h  Record.h  StorageManager.h  cipher.h  database.h  exceptions.h  storage.h  user.h
include/entities/: Action.h  Assignment.h  Research.h  Sensor.h  SensorUsage.h  User.h
include/research/: Date.h  Research.h  ResearchPoint.h  Sensor.h  User.h  date.h  research.h  researchpoint.h  sensor.h
include/ui/: EditActionDialog.h  EditPointDialog.h  EditResearchersDialog.h  ListItemWithData.h  ListItemWithID.h  LoginWindow.h  MainWindow.h  NewSensorDialog.h  NewUserDialog.h  SensorListDialog.h  ui_addresearch.h  ui_editpoint.h  ui_editresearchers.h  ui_login.h  ui_main.h  ui_newsensor.h  ui_newuser.h  ui_selectresearch.h  ui_sensorlist.h
include/ui/designer/: addresearch.ui  editaction.ui  editpoint.ui  main.ui  newsensor.ui  newuser.ui
include/utils/: Date.h
src/: CMakeLists.txt  globals.cpp  main.cpp  test.cpp
src/db/: Database.cpp  LoginManager.cpp  StorageManager.cpp  cipher.cpp  database.cpp  exceptions.cpp  sha256.cpp  user.cpp
src/designer/: login.ui  selectresearch.ui  sensorlist.ui
src/entities/: Sensor.cpp  User.cpp
src/research/: Date.cpp  Research.cpp  ResearchPoint.cpp  Sensor.cpp  User.cpp  date.cpp  research.cpp  researchpoint.cpp  sensor.cpp
src/ui/: EditActionDialog.cpp  EditPointDialog.cpp  EditResearchersDialog.cpp  ListItemWithID.cpp  LoginWindow.cpp  MainWindow.cpp  NewSensorDialog.cpp  NewUserDialog.cpp  SensorListDialog.cpp
src/ui/designer/: addresearch.ui  compile-ui.sh  editpoint.ui  editresearchers.ui  selectresearch.ui  sensorlist.ui
src/utils/: Date.cpp
